--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/auth">Search</a>
+                    <a class="nav-link" href="/playground">Search</a>
                 </li>
             </ul>
 
