--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -11,7 +11,7 @@
         <div class="card-body">
         <ul>
             <li>You'll be able to play with our search</li>
-            <li>Nothing you disocver will be saved</li>
+            <li>Nothing you discover will be saved</li>
         </ul>
         <a class="btn btn-primary" href="/auth">Start Search</a>
         </div>
@@ -24,7 +24,7 @@
             <li>You'll be able to play with our search</li>
             <li>The music you find <i><b>will be added as a playlist on your Spotify account</i></b> unless you don't want to keep that playlist</li>
         </ul>
-        <a href="https://accounts.spotify.com/authorize?client_id=8aee06a9d32647a698e052031bd05312&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A5000%2Fuser_auth&scope=playlist-modify-public%20playlist-modify-private" class="btn btn-success">Link and Search</a>
+        <a href="https://accounts.spotify.com/authorize?client_id=8aee06a9d32647a698e052031bd05312&response_type=code&redirect_uri=https%3A%2F%2Fthe-spotify-playground.herokuapp.com%2Fuser_auth&scope=playlist-modify-public%20playlist-modify-private" class="btn btn-success">Link and Search</a>
         </div>
     </div>
 
