changed config info and typo fix

--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -78,7 +78,7 @@
 
             <label class="btn btn-outline-success btn-sm m-2">
                 <input type="checkbox" name="danceability" value="1" class="form-check-input">
-                Dancable music?
+                Danceble music?
             </label>
 
             <label class="btn btn-outline-success btn-sm m-2">
