--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,31 +4,23 @@
 
 {% block content %}
 
-    <h3 class="my-4">How do you want to use the Spotify Playground?</h3>
+    <div class="card mt-5 shadow">
+        <h5 class="card-header">Discover new music in really cool ways!</h5>
+        <div class="card-body">
+        <p>Spotify has analyzed more than 30,000,000 songs but they don't give their users direct access to this analysis... that's where we come in! You can "seed" music recommendations by your favorite few artists, songs, genre, or a few really precise factors like tempo or even time signature!</p>
+        <ol>
+            <li>You can try our app <b>anonymously</b>, or,</li>
+            <li>You can have your results be added as a playlist in <b>your Spotify account</b> (these playlists are easily deleted if you don't like it).</li>
+        </ol>
+        </div>
+    </div>
     
     <div class="card my-4 shadow">
-        <h5 class="card-header">Anonymously</h5>
+        <h5 class="card-header">How do you want to use the app?</h5>
         <div class="card-body">
-        <ul>
-            <li>You'll be able to play with our search</li>
-            <li>Nothing you discover will be saved</li>
-        </ul>
-        <a class="btn btn-primary" href="/auth">Start Search</a>
+        <a class="btn btn-primary" href="/auth">Try Anonymously</a>
+        <a href="https://accounts.spotify.com/authorize?client_id=8aee06a9d32647a698e052031bd05312&response_type=code&redirect_uri=https%3A%2F%2Fthe-spotify-playground.herokuapp.com%2Fuser_auth&scope=playlist-modify-public%20playlist-modify-private" class="btn btn-success">Link to Your Spotify</a>
         </div>
     </div>
-
-    <div class="card mt-5 shadow">
-        <h5 class="card-header">Linked to your Spotify</h5>
-        <div class="card-body">
-        <ul>
-            <li>You'll be able to play with our search</li>
-            <li>The music you find <i><b>will be added as a playlist on your Spotify account</i></b> unless you don't want to keep that playlist</li>
-        </ul>
-        <a href="https://accounts.spotify.com/authorize?client_id=8aee06a9d32647a698e052031bd05312&response_type=code&redirect_uri=https%3A%2F%2Fthe-spotify-playground.herokuapp.com%2Fuser_auth&scope=playlist-modify-public%20playlist-modify-private" class="btn btn-success">Link and Search</a>
-        </div>
-    </div>
-
-
-
 
 {% endblock %}
